Salesforce/main/default/objects/Negocio_por_Conta__c/Negocio_por_Conta__c.object-meta.xml
<CustomObject>
    <label>Negocio por Conta</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Negocios por Contas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>