Salesforce/main/default/objects/Negocio_por_Conta__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Negocios por Contas</relationshipLabel>
    <relationshipName>Negocios_por_Contas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>