Salesforce/main/default/objects/Negocio_por_Conta__c/fields/Cultura__c.field-meta.xml
<CustomField>
    <fullName>Cultura__c</fullName>
    <label>Cultura</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOJA</fullName>
                <default>true</default>
                <label>SOJA</label>
            </value>
            <value>
                <fullName>MILHO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>