Salesforce/main/default/objects/Negocio_por_Conta__c/fields/Region_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Region_Comercial__c</fullName>
    <label>Região Comercial</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BRASIL</fullName>
            </value>
            <value>
                <fullName>REGION 1</fullName>
            </value>
            <value>
                <fullName>REGION 2</fullName>
            </value>
            <value>
                <fullName>CERRADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>