Salesforce/main/default/objects/Negocio_por_Conta__c/fields/Supervidor__c.field-meta.xml
<CustomField>
    <fullName>Supervidor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervidor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Negocios_por_Contas</relationshipName>
    <type>Lookup</type>
</CustomField>