Salesforce/main/default/objects/Negocio_por_Conta__c/validationRules/profile_filter.validationRule-meta.xml
<ValidationRule>
    <fullName>profile_filter</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name = &apos;Comercial LE&apos;</errorConditionFormula>
    <errorMessage>Este perfil não está de acordo com o perfil Comercial LE</errorMessage>
</ValidationRule>